--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="header">404 NOT FOUND</header>
   <section class="container">
     <div class="img-container">
-      <img src="/Scarecrow.png" alt="Scarecrow image">
+      <img src="Scarecrow.png" alt="Scarecrow image">
     </div>
     <div class="text-container">
       <h1 class="title">I have bad news for you</h1>
